modified the step by step navigation add the lnkbox to the boxes in the right column (PR #1169) fix spacing for link boxes

--- a/src/components/_base.scss
+++ b/src/components/_base.scss
@@ -17,3 +17,11 @@
 		}
 	}
 }
+
+// Step by step navigation used on Advanced service template
+.gc-stp-stp {
+	border-bottom: solid 1px #ccc;
+	margin-bottom: 30px;
+	margin-top: 15px;
+}
+
